# DiplomaLang

./: .clang-format  CMakeLists.txt  CMakePresets.json  input.txt  язык программирования.md
code/: common.cpp  main.cpp  tokenizer.cpp
interface/: abstract_syntax_tree.hpp  common.hpp  expression.hpp  function.hpp  interpreter.hpp  syntax_tree.hpp  tokenizer.hpp
source/: abstract_syntax_tree.cpp  interpreter.cpp  llvm_walker.cpp  main.cpp  syntax_tree.cpp  tokenizer.cpp  type_walker.cpp
source/interpreter/: console_interpreter.cpp  llvm_interpreter.cpp
test/: basic.cpp
